Make more pages ready for translation (#2855)

--- a/src/content/docs/en/guides/integrations-guide/image.mdx
+++ b/src/content/docs/en/guides/integrations-guide/image.mdx
@@ -13,7 +13,7 @@ description: Learn how to use the @astrojs/image integration in your Astro proje
 githubURL: 'https://github.com/withastro/astro/tree/main/packages/integrations/image/'
 hasREADME: true
 category: other
-i18nReady: false
+i18nReady: true
 ---
 
 import Video from '~/components/Video.astro';
@@ -535,7 +535,7 @@ import { defineConfig } from 'astro/config';
 import image from '@astrojs/image';
 
 export default defineConfig({
-	integrations: [image({
+  integrations: [image({
     // may be useful if your hosting provider allows caching between CI builds
     cacheDir: "./.cache/image"
   })]
