--- a/src/content/docs/en/guides/integrations-guide/sitemap.mdx
+++ b/src/content/docs/en/guides/integrations-guide/sitemap.mdx
@@ -13,7 +13,7 @@ description: Learn how to use the @astrojs/sitemap integration in your Astro pro
 githubURL: 'https://github.com/withastro/astro/tree/main/packages/integrations/sitemap/'
 hasREADME: true
 category: other
-i18nReady: false
+i18nReady: true
 ---
 
 import Video from '~/components/Video.astro';
@@ -100,7 +100,7 @@ After verifying that the sitemaps are built, you can add them to your site's `<h
 ```html ins={3}
 // src/layouts/Layout.astro
 <head>
-	<link rel="sitemap" href="/sitemap-index.xml">
+  <link rel="sitemap" href="/sitemap-index.xml">
 </head>
 ```
 
