--- a/src/content/docs/es/tutorial/1-setup/index.mdx
+++ b/src/content/docs/es/tutorial/1-setup/index.mdx
@@ -58,7 +58,7 @@ En esta unidad, **crearás un nuevo proyecto** que estará **almacenado online e
 
 A medida que escribas código, enviarás periódicamente tus cambios a GitHub. Netlify utilizará los archivos de tu repositorio de GitHub para construir tu sitio web, y luego lo publicará en Internet en una dirección única donde cualquiera pueda verlo.
 
-Cada vez que envíes un cambio a GitHub, se enviará una notificación a Netlify. Entonces, Netlify automáticamente reconstruirá y volverá a publicar su sitio en vivo para reflejar esos cambios.
+Cada vez que envíes un cambio a GitHub, se enviará una notificación a Netlify. Entonces, Netlify automáticamente reconstruirá y volverá a publicar tu sitio en vivo para reflejar esos cambios.
 
 
 
