--- a/src/content/docs/en/reference/integrations-reference.mdx
+++ b/src/content/docs/en/reference/integrations-reference.mdx
@@ -359,7 +359,7 @@ export default function myIntegration() {
 
 #### `routes` option
 
-**Type:** [`RouteData[]`](https://github.com/withastro/astro/blob/main/packages/astro/src/%40types/astro.ts#L973)
+**Type:** [`RouteData[]`](#routedata-type-reference)
 
 A list of all generated routes alongside their associated metadata. **This will be empty when using an SSR adapter!**
 
@@ -368,7 +368,7 @@ You can reference the full `RouteData` type below, but the most common propertie
 - `component` - the input file path relative to the project root
 - `pathname` - the output file URL (undefined for routes using `[dynamic]` and `[...spread]` params)
 
-**`RouteData` type reference**
+##### `RouteData` type reference
 
 ```ts
 interface RouteData {
