--- a/src/content/docs/de/guides/deploy/aws.mdx
+++ b/src/content/docs/de/guides/deploy/aws.mdx
@@ -5,7 +5,7 @@ type: deploy
 i18nReady: true
 ---
 
-[AWS] (https://aws.amazon.com/) ist eine umfangreiche Web-App-Hosting-Plattform, die für die Bereitstellung einer Astro-Seite verwendet werden kann.
+[AWS](https://aws.amazon.com/) ist eine umfangreiche Web-App-Hosting-Plattform, die für die Bereitstellung einer Astro-Seite verwendet werden kann.
 
 Für die Bereitstellung deines Projekts bei AWS musst du die [AWS-Konsole](https://aws.amazon.com/console/) verwenden. (Die meisten dieser Aktionen können auch mit der [AWS CLI](https://aws.amazon.com/cli/) durchgeführt werden). Diese Anleitung führt dich durch die Schritte zur Bereitstellung deiner Website bei AWS und beginnt mit der einfachsten Methode. Anschließend wird gezeigt, wie du zusätzliche Services hinzufügen kannst, um die Kosteneffizienz und Leistung zu verbessern.
 
@@ -50,9 +50,8 @@ S3 ist der Startpunkt jeder Anwendung. Hier werden deine Projektdateien und ande
     Der Bucket-Name sollte weltweit eindeutig sein. Wir empfehlen eine Kombination aus deinem Projektnamen und dem Domainnamen deiner Website.
     :::
 
-2. Deaktiviere **"Öffentlichen Zugriff blockiere"**. Standardmäßig werden alle Buckets von AWS als privat eingestuft. Um sie öffentlich zu machen, musst du das Kontrollkästchen "Öffentlichen Zugriff blockieren" in den Eigenschaften des Buckets deaktivieren.
-
-3. Lade deine erstellten Dateien, die sich in `dist` befinden, in S3 hoch. Du kannst dies manuell in der Konsole tun oder die AWS CLI verwenden. Wenn du die AWS CLI verwendest, kannst du nach der [Authentifizierung mit deinen AWS-Anmeldeinformationen](https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-files.html) folgenden Befehl verwenden:
+2. Deaktiviere **"Blockieren des gesamten öffentlichen Zugriffs"**. Standardmäßig werden alle Buckets von AWS als privat eingestuft. Um sie öffentlich zu machen, musst du das Kontrollkästchen "Blockieren des gesamten öffentlichen Zugriffs" in den Berechtigungen des Buckets deaktivieren.
+3. Lade deine erstellten Dateien, die sich in `dist` befinden, in S3 hoch. Du kannst dies manuell in der Konsole tun oder die AWS CLI verwenden. Wenn du die AWS CLI verwendest, kannst du nach der [Authentifizierung mit deinen AWS-Anmeldeinformationen](https://docs.aws.amazon.com/de_de/cli/latest/userguide/cli-configure-files.html) folgenden Befehl verwenden:
 
     ```
     aws s3 cp dist/ s3://<BUCKET_NAME>/ --recursive
@@ -79,7 +78,7 @@ S3 ist der Startpunkt jeder Anwendung. Hier werden deine Projektdateien und ande
     Vergiss nicht, `<BUCKET_NAME>` durch den Namen deines Buckets zu ersetzen.
     :::
 
-5. Aktiviere das Website-Hosting für deinen Bucket. Du findest diese Einstellung in den **Einstellungen > Statisches Website-Hosting** des Buckets. Setze dein Index-Dokument auf `index.html` und dein Fehler-Dokument auf `404.html`. Schließlich findest du deine neue Website-URL unter **Einstellungen > Statisches Website-Hosting** im Bucket.
+5. Aktiviere das Website-Hosting für deinen Bucket. Du findest diese Einstellung in den **Einstellungen > Hosten einer statischen Website** des Buckets. Setze dein Index-Dokument auf `index.html` und dein Fehler-Dokument auf `404.html`. Schließlich findest du deine neue Website-URL unter **Einstellungen > Hosten einer statischen Website** im Bucket.
 
     :::note
     Wenn du eine Single-Page-Anwendung (SPA) bereitstellst, setze dein Fehlerdokument auf `index.html`.
@@ -98,7 +97,7 @@ Wir werden CloudFront nutzen, um unseren S3-Bucket zu verlinken und die Dateien 
     :::tip
     Der Bucket-Name sollte weltweit eindeutig sein. Wir empfehlen eine Kombination aus deinem Projektnamen und dem Domainnamen deiner Website.
     :::
-2. Lade deine erstellten Dateien, die sich in `dist` befinden, in S3 hoch. Du kannst dies manuell in der Konsole tun oder die AWS CLI verwenden. Wenn du die AWS CLI verwendest, kannst du nach der [Authentifizierung mit deinen AWS-Anmeldeinformationen](https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-files.html) folgenden Befehl verwenden:
+2. Lade deine erstellten Dateien, die sich in `dist` befinden, in S3 hoch. Du kannst dies manuell in der Konsole tun oder die AWS CLI verwenden. Wenn du die AWS CLI verwendest, kannst du nach der [Authentifizierung mit deinen AWS-Anmeldeinformationen](https://docs.aws.amazon.com/de_de/cli/latest/userguide/cli-configure-files.html) folgenden Befehl verwenden:
 
     ```
     aws s3 cp dist/ s3://<BUCKET_NAME>/ --recursive
@@ -134,13 +133,13 @@ Wir werden CloudFront nutzen, um unseren S3-Bucket zu verlinken und die Dateien 
     * **Viewer protocol policy:** "Zu HTTPS umleiten"
     * **Default root object:** `index.html`
 
-Mit dieser Konfiguration wird der Zugriff auf deinen S3-Bucket aus dem öffentlichen Internet blockiert und deine Website über das globale CDN-Netzwerk bereitgestellt. Die URL deiner CloudFront-Distribution findest du im Bucket unter **Distributionen > Domainname**.
+Mit dieser Konfiguration wird der Zugriff auf deinen S3-Bucket aus dem öffentlichen Internet blockiert und deine Website über das globale CDN-Netzwerk bereitgestellt. Die URL deiner CloudFront-Distribution findest du im Bucket unter **Distributionen > Domain name**.
 
 ### Einrichtung von CloudFront-Funktionen
 
 Leider unterstützt CloudFront standardmäßig kein mehrseitiges `Sub-folder/Index`-Routing. Um es zu konfigurieren, verwenden wir CloudFront-Funktionen, um die Anfrage auf das gewünschte Objekt in S3 zu richten.
 
-1. Erstelle eine neue CloudFront-Funktion mit dem folgenden Codeschnipsel. Du findest CloudFront-Funktionen unter **CloudFront > Funktionen**.
+1. Erstelle eine neue CloudFront-Funktion mit dem folgenden Codeschnipsel. Du findest CloudFront-Funktionen unter **CloudFront > Functions**.
 
     ```js
     function handler(event) {
@@ -159,7 +158,7 @@ Leider unterstützt CloudFront standardmäßig kein mehrseitiges `Sub-folder/Ind
       return request;
     }
     ```
-  2. Verknüpfe deine Funktion mit der CloudFront-Distribution. Du findest diese Option in den **Einstellungen > Verhaltensweisen > Bearbeiten > Funktion** deiner CloudFront-Distribution.
+  2. Verknüpfe deine Funktion mit der CloudFront-Distribution. Du findest diese Option in den **Settings > Behaviors > Edit > Function associations** deiner CloudFront-Distribution.
         * **Viewer request - Function type:** CloudFront-Funktion.
         * **Viewer request - Function ARN:** Wähle die Funktion aus, die du im vorherigen Schritt erstellt hast.
 
@@ -192,12 +191,12 @@ Es gibt viele Möglichkeiten, die kontinuierliche Bereitstellung für AWS einzur
     ```
 
     :::caution
-    Vergiss nicht, `<DISTRIBUTION_ARN>` und `<BUCKET_NAME>` zu ersetzen. Du findest den ARN in **CloudFront > Distributionen > Details**.
+    Vergiss nicht, `<DISTRIBUTION_ARN>` und `<BUCKET_NAME>` zu ersetzen. Du findest den ARN in **CloudFront > Distributions > Details**.
     :::
 
 2. Erstelle einen neuen IAM-Benutzer und füge die Richtlinie an den Benutzer an. So erhältst du deinen `AWS_SECRET_ACCESS_KEY` und deine `AWS_ACCESS_KEY_ID`.
 
-3. Füge diesen Beispielworkflow zu deinem Repository unter `.github/workflows/deploy.yml` hinzu und pushe ihn auf GitHub. Du musst `AWS_ACCESS_KEY_ID`, `AWS_SECRET_ACCESS_KEY`, `BUCKET_ID` und `DISTRIBUTION_ID` als "Geheimnisse" zu deinem Repository auf GitHub unter **Einstellungen** > **Geheimnisse** > **Aktionen** hinzufügen. Klicke auf <kbd>Neues Repository-Geheimnis</kbd>, um jedes einzelne hinzuzufügen.
+3. Füge diesen Beispielworkflow zu deinem Repository unter `.github/workflows/deploy.yml` hinzu und pushe ihn auf GitHub. Du musst `AWS_ACCESS_KEY_ID`, `AWS_SECRET_ACCESS_KEY`, `BUCKET_ID` und `DISTRIBUTION_ID` als "Secrets" zu deinem Repository auf GitHub unter **Settings** > **Secrets** > **Actions** hinzufügen. Klicke auf <kbd>Neues Repository-Secret</kbd>, um jedes einzelne hinzuzufügen.
 
     ```yaml
     name: Website bereitstellen
@@ -230,5 +229,5 @@ Es gibt viele Möglichkeiten, die kontinuierliche Bereitstellung für AWS einzur
     ```
 
     :::note
-    Deine `BUCKET_ID` ist der Name deines S3-Buckets. Deine `DISTRIBUTION_ID` ist die ID deiner CloudFront-Distribution. Du findest deine CloudFront-Veröffentlichungs-ID unter **CloudFront > Veröffentlichung > ID**
+    Deine `BUCKET_ID` ist der Name deines S3-Buckets. Deine `DISTRIBUTION_ID` ist die ID deiner CloudFront-Distribution. Du findest deine CloudFront-Veröffentlichungs-ID unter **CloudFront > Distributions> ID**
     :::
