--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -153,7 +153,7 @@ Astro doesn't have built-in internationalization (i18n) support, but you can bui
     📚 Read more about [dynamic routing](/en/core-concepts/routing/#dynamic-routes).
 
     :::tip[Date formatting]
-    The example above uses the built-in [`toLocaleString()` date-formatting method](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date/toLocaleString) to create a human-readable string from our frontmatter date.
+    The example above uses the built-in [`toLocaleString()` date-formatting method](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date/toLocaleString) to create a human-readable string from the frontmatter date.
     This ensures the date and time are formatted to match the user’s language.
     :::
 
