--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -205,7 +205,7 @@ Create dictionaries of terms to translate the labels for UI elements around your
     ```
 
     :::note[Did you notice?]
-    In step 1, the `nav.twitter` string was not translated to French. The `useTranslations` helper here will return the default language’s value if a key is not translated so that French users will still see “Twitter”.
+    In step 1, the `nav.twitter` string was not translated to French. You may not want every term translated, such as proper names or common industry terms. The `useTranslations` helper will return the default language’s value if a key is not translated. In this example, French users will also see “Twitter” in the nav bar.
     :::
     
 3. Import the helpers where needed and use them to choose the UI string that corresponds to the current language. For example, a nav component might look like:
