--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -7,7 +7,10 @@ i18nReady: false
 import FileTree from '~/components/FileTree.astro'
 import StaticSsrTabs from '~/components/tabs/StaticSsrTabs.astro'
 
-Astro doesn't have built-in internationalization (i18n) support, but you can build your own i18n solution. In this recipe, you'll learn how to use content collections and dynamic routing to serve content for different languages.
+Astro doesn't have built-in internationalization (i18n) support, but you can build your own i18n solution.
+In this recipe, you'll learn how to use content collections and dynamic routing to serve content for different languages.
+
+This example serves each language at its own subpath, e.g. `example.com/en/blog` for English and `example.com/fr/blog` for French.
 
 ## Recipe
 
