--- a/src/content/docs/fr/guides/migrate-to-astro.mdx
+++ b/src/content/docs/fr/guides/migrate-to-astro.mdx
@@ -1,23 +1,23 @@
 ---
-title: Migrer un projet existant vers Astro.
+title: Migrer un projet existant vers Astro
 description: Quelques trucs et astuces pour convertir votre vitre vers Astro.
 i18nReady: true
 ---
 import MigrationGuidesNav from '~/components/MigrationGuidesNav.astro';
 
-**Prêt à conververtir votre site vers Astro ?** Consultez l'un de nos guides afin d'obtenir des conseils pour la migration.
+**Prêt à convertir votre site vers Astro ?** Consultez l'un de nos guides afin d'obtenir des conseils pour la migration.
 
 ## Guides de Migration
 
 <MigrationGuidesNav />
 
-Notez que beaucoup de des pages sont des **ébauches** : ce sont des collections de ressources qui attendent votre contribution !
+Notez que beaucoup de ces pages sont des **ébauches** : ce sont des collections de ressources qui attendent votre contribution !
 
 ## Pourquoi migrer votre site vers Astro ?
 
-Astro offre de nombreux avantages : performance, simplicité, et de nombreuses fonctionnalités que vous souhaitez intégrer directement dans le framework. Lorsque vous avez besoin d'étendre votre site, Astro fournit plusieurs [intégrations officielles et communautaires tierces](https://astro.build/integrations).
+Astro offre de nombreux avantages : performance, simplicité et de nombreuses fonctionnalités que vous souhaitez sont directement intégrées dans le framework. Lorsque vous avez besoin d'étendre votre site, Astro fournit plusieurs [intégrations officielles et communautaires tierces](https://astro.build/integrations).
 
-Migrer peut représenter moins de travail que vous ne le pensez !
+Migrer votre site peut représenter moins de travail que vous ne le pensez !
 
 
 Selon votre projet déjà existant, vous pourrez peut-être utiliser votre :
@@ -32,16 +32,16 @@ Selon votre projet déjà existant, vous pourrez peut-être utiliser votre :
 
 ## Quels projects puis-je convertir vers Astro ?
 
-[De nombreux sites existants peuvent être construits avec Astro](/fr/concepts/why-astro/). Astro est parfaitement adapté à vos sites existants basés sur le contenu, tels que les blogs, les landing pages, les sites marketing et les portfolios. Astro s'intègre à plusieurs Headless CMS populaires et vous permet de connecter des paniers de boutique d'e-commerce.
+[De nombreux sites existants peuvent être construits avec Astro](/fr/concepts/why-astro/). Astro est parfaitement adapté à vos sites existants basés sur le contenu, tels que les blogs, les landing pages, les sites marketing et les portfolios. Astro s'intègre à plusieurs Headless CMS populaires et vous permet de connecter des paniers de boutique eCommerce.
 
 Astro vous permet de choisir entre un site généré statiquement et le [rendu côté serveur (SSR)](/fr/guides/server-side-rendering/), ce qui en fait un excellent remplacement pour les SSGs ou pour les sites qui ont besoin de récupérer des données à la volée.
 
-## Comment la conception de mon projet va-t-il évoluer ?
+## Comment la conception de mon projet va-t-elle évoluer ?
 
-En fonction de votre projet existant, vous devrez peut-être penser différemment à propos de :
+En fonction de votre projet existant, vous devrez peut-être penser différemment concernant :
 
 - Concevoir en [îles Astro](/fr/concepts/islands/#quest-ce-quune-île-astro) pour éviter d'envoyer du Javascript inutile au navigateur.
 
-- Fournir une activité côté client avec les [balises `<script>` côté client](/fr/guides/client-side-scripts/) ou les [composants de Framework UI](/fr/core-concepts/framework-components/).
+- Fournir une interactivité côté client avec les [balises `<script>` côté client](/fr/guides/client-side-scripts/) ou les [composants de Framework UI](/fr/core-concepts/framework-components/).
 
-- Gérer [l'état partagé](/fr/core-concepts/sharing-state/) avec les Nano Stores ou un local storage au lieu de Wrapper et Hooks à l'échelle de l'application.
+- Gérer [l'état partagé](/fr/core-concepts/sharing-state/) avec les Nano Stores ou un Local Storage au lieu de Wrappers et Hooks à l'échelle de l'application.
