--- a/src/content/docs/en/recipes/bun.mdx
+++ b/src/content/docs/en/recipes/bun.mdx
@@ -5,15 +5,14 @@ type: recipe
 i18nReady: false
 ---
 
-[Bun](<https://bun.sh/>) is a newer runtime for JavaScript built for speed. See [Bun's documentation](<https://bun.sh/docs>) for more information.
+[Bun](<https://bun.sh/>) is a runtime for JavaScript built for speed. See [Bun's documentation](<https://bun.sh/docs>) for more information.
 
 Using Bun with Astro still is experimental, not all integrations might work as expected. If you find any issues, please open an issue!
 
 ## Installing Bun
 
-Installing Bun is a breeze - just run one simple command in your terminal and you're ready to go! Plus, with support for `npx packages, creating a new Astro project with Bun is as easy as pie.
+Use the following command to install Bun:
 
-Here's how you can install Bun:
 
 ```bash
 curl -fsSL https://bun.sh/install | bash
@@ -21,14 +20,14 @@ curl -fsSL https://bun.sh/install | bash
 
 ## Create a new Astro project with Bun
 
-Bun has support for `npx` packages, which means you can create a new Astro project with Bun in one familiar command:
+Create a new Astro project with Bun using the following `create astro` command:
 
 ```bash
 bunx create-astro@latest my-astro-project-using-bun
 ```
 
 :::tip[Tip]
-If you want to use a theme, that will work as well!
+You can also [create a new Astro project from any existing Astro GitHub repository](/en/install/auto/#starter-templates) using the `--template` flag:
 ```bash
 bunx create-astro@latest my-astro-project-using-bun --template eliancodes/brutal
 ```
@@ -36,7 +35,9 @@ bunx create-astro@latest my-astro-project-using-bun --template eliancodes/brutal
 
 ## Install your dependencies
 
-If you're starting a new project using `bunx create-astro`, you can skip this step, the CLI will automatically use Bun to install dependencies. Otherwise, you'll need to install your dependencies with Bun:
+If you're starting a new project using `bunx create-astro`, the CLI will automatically use Bun to install dependencies and you can skip this step. 
+
+Otherwise, you'll need to install your dependencies with Bun:
 
 ```bash
 bun install
@@ -44,19 +45,19 @@ bun install
 
 ## Running the development server
 
-Running the development server with Bun should feel quite familiar:
+To run the development server, use the following command:
 
 ```bash
 bun run dev
 ```
 
 :::note[Note]
-Keep in mind that using `bun dev` will not work, as that will start Bun's internal dev server and not your Astro development server.
+Use the full command `bun run dev` to start your Astro development server. The command `bun dev` will start Bun's own internal dev server.
 :::
 
 ## Using Astro integrations
 
-But the best part? Bun makes it simple to integrate with all of your favorite Astro tools. With support for npx packages, you can use any of the Astro integrations with Bun in one familiar command:
+You can also use any of the official Astro integrations with Bun and the `astro add` command:
 
 ```bash
 bunx astro add react
@@ -71,18 +72,17 @@ This will work exactly the same as if you were using NPM, but with the added ben
 
 ## Building your site with Bun
 
-And when it's time to build and serve your site, Bun has got you covered with just a few easy commands.
+To build and serve your site, Bun has familiar commands:
 
 ```bash
 bun run build
 ```
 
-This will output your site to the `dist/` directory, just like it would do with NPM.
+Bun's build command will output your site to the `dist/` directory.
 
-Then, you can serve your site the `preview` command:
+Then, you can serve your site using the `preview` command:
 
 ```bash
 bun preview
 ```
 
-That's all there is to it!
