--- a/src/content/docs/en/recipes/bun.mdx
+++ b/src/content/docs/en/recipes/bun.mdx
@@ -7,7 +7,7 @@ i18nReady: false
 
 [Bun](<https://bun.sh/>) is a runtime for JavaScript built for speed. See [Bun's documentation](<https://bun.sh/docs>) for more information.
 
-Using Bun with Astro still is experimental, not all integrations might work as expected. If you find any issues, please open an issue!
+Using Bun with Astro still is experimental. Some integrations may not work as expected. If you have [any problems using Bun](<https://github.com/oven-sh/bun/issues/new/choose>), please [open an issue on GitHub](<https://github.com/withastro/astro/issues/new/choose>)!
 
 ## Installing Bun
 
@@ -66,8 +66,7 @@ bunx astro add react
 This will work exactly the same as if you were using NPM, but with the added benefit of using Bun's blazing fast runtime.
 
 :::note[Note]
-1. Some integrations might not work as expected. If you find any issues, please open an issue!
-2. Keep in mind that using `bun add` will not work, as that will add the package to Bun's dependencies and not your Astro project.
+Some integrations might not work as expected. If you find any issues, please [open an issue on GitHub](<https://github.com/withastro/astro/issues/new/choose>)!
 :::
 
 ## Building your site with Bun
