--- a/src/content/docs/de/guides/troubleshooting.mdx
+++ b/src/content/docs/de/guides/troubleshooting.mdx
@@ -33,7 +33,7 @@ Framework-Komponenten werden standardmäßig auf dem Server ausgeführt, daher k
 
 - Wenn sich der Code in einer Astro-Komponente befindet, verschiebe ihn in ein `<script>`-Tag außerhalb des Frontmatter. Dadurch wird Astro angewiesen, den Code auf dem Client auszuführen, wo `document` und `window` verfügbar sind.
 
-- Wenn sich der Code in einer Framework-Komponente befindet, versuche, nach dem Rendering mit Lifecycle-Methoden auf diese Objekte zuzugreifen (z. B. [`useEffect()`](https://reactjs.org/docs/hooks-reference.html#useeffect) in React, [`onMounted()`](https://vuejs.org/api/composition-api-lifecycle.html#onmounted) in Vue und [`onMount()`](https://svelte.dev/docs#run-time-svelte-onmount) in Svelte). Du kannst auch verhindern, dass die Komponente überhaupt auf dem Server gerendert wird, indem du die Direktive [`client:only`](/de/reference/directives-reference/#clientonly) hinzufügst.
+- Wenn sich der Code in einer Framework-Komponente befindet, versuche, nach dem Rendering mit Lifecycle-Methoden auf diese Objekte zuzugreifen (z. B. [`useEffect()`](https://react.dev/reference/react/useEffect) in React, [`onMounted()`](https://vuejs.org/api/composition-api-lifecycle.html#onmounted) in Vue und [`onMount()`](https://svelte.dev/docs#run-time-svelte-onmount) in Svelte). Du kannst auch verhindern, dass die Komponente überhaupt auf dem Server gerendert wird, indem du die Direktive [`client:only`](/de/reference/directives-reference/#clientonly) hinzufügst.
 
 **Status**: Erwartetes Astro-Verhalten, wie vorgesehen.
 
