--- a/src/content/docs/es/contribute.mdx
+++ b/src/content/docs/es/contribute.mdx
@@ -8,17 +8,17 @@ import ContributorList from '~/components/ContributorList.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
-Aceptamos contribuciones de cualquier tamaño y contribuyentes de todos los niveles de habilidad. Como un proyecto de código abierto, creemos en devolver a nuestros contribuyentes. Estamos encantados de ayudar con orientación sobre PRs, escritura técnica y convertir cualquier idea de función en realidad.
+Aceptamos contribuciones de cualquier tamaño y contribuyentes de todos los niveles de habilidad. Como un proyecto de código abierto, creemos en devolver a nuestros contribuyentes. Estamos encantados de ayudar con orientación sobre PRs, escritura técnica y convertir cualquier idea en realidad.
 
 ## Maneras de contribuir
 
-Hay muchas formas de contribuir al sitio web de la documentación de Astro!
+¡Hay muchas formas de contribuir a la documentación de Astro!
 
 El sitio web de la documentación de Astro es ... ¡un sitio web de Astro! Mantenerlo requiere no solo contenido escrito, sino también mantener el código de Astro y abordar preocupaciones de a11y, CSS, UI y UX. También hacemos que nuestra documentación esté disponible en varios idiomas, por lo que necesitamos ayuda para traducir todo el sitio.
 
 ¡También puedes hacer una contribución enorme al involucrarte dejando comentarios de revisión en PR, agregando ideas en problemas y discusiones existentes de GitHub y participando en nuestras tareas de mantenimiento de problemas "Fijados"!
 
-Cada PR, especialmente las PR de traducción, ¡necesita evaluadores! Revisar la PR y dejar comentarios, sugerencias o un aprobador "LGTM!" ("¡Me parece bien!") Es una gran manera de comenzar en Team Docs y aprender más sobre Astro.
+Cada PR, especialmente las PRs de traducción, ¡necesita evaluadores! Revisar la PR y dejar comentarios, sugerencias o aprobarla con un "LGTM!" ("¡Me parece bien!") es una gran manera de comenzar en Team Docs y aprender más sobre Astro.
 
 ## Guías de contribuyentes
 
@@ -37,6 +37,6 @@ Estas son las guías para los roles dentro de la comunidad de Astro.
 
 ## Nuestros contribuyentes
 
-Estos documentos son traídos por toda esta gente útil. [¡Únete a nosotros en GitHub!](https://github.com/withastro/docs)
+Estos documentos son traídos por nuestra comunidad. [¡Únete a nosotros en GitHub!](https://github.com/withastro/docs)
 
 <ContributorList githubRepo="withastro/docs" />
